# SafetyComplianceManager

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml  requirements.txt
data/frameworks/: gdpr.yaml  iso27001.yaml  soc2.yaml
src/: config.py  database.py  main.py
src/agent/: context.py  engine.py  prompts.py  tools.py
src/api/v1/: __init__.py  agent.py  audits.py  frameworks.py  policies.py  reports.py  risks.py
src/cli/: main.py
src/frameworks/: base.py  registry.py
src/migrations/: env.py
src/models/: __init__.py  agent_task.py  audit.py  framework.py  policy.py  report.py  risk.py
src/office365/: auth.py  excel.py  graph_client.py  outlook.py  powerpoint.py  sharepoint.py  teams.py  word.py
src/schemas/: __init__.py  agent.py  audit.py  framework.py  policy.py  report.py  risk.py
src/services/: audit_service.py  framework_service.py  policy_service.py  report_service.py  risk_service.py
tests/: conftest.py  test_api.py  test_frameworks.py  test_services.py
